fix footer spacing

--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ body {
 }
 
 .footerSocialList {
-    margin: 8em 0 0;
+    margin: 4em 0 0;
     padding: 0;
     list-style: none;
     text-align: center
